--- a/style/Account/style_headerAccount.css
+++ b/style/Account/style_headerAccount.css
@@ -28,22 +28,25 @@
   text-shadow: rgba(0, 0, 0, 0.5) 1px 0 10px;
 }
 
-.headerAccountLinks a:last-child {
+.headerAccountLinks button {
+  color: black;
+}
+
+.headerAccountLinks button:hover {
+  text-shadow: rgba(0, 0, 0, 0.5) 1px 0 10px;
+  cursor: pointer;
+}
+
+.headerAccountLinks button {
   display: flex;
   align-items: center;
   gap: 8px;
+  background-color: white;
+  border: none;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 1.1rem;
 }
 
 .icon {
     max-width: 30px;
-}
-
-/* Footer */
-footer {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 50px;
-  border-top: solid 0.5px;
 }
