--- a/style/Account/style_account.css
+++ b/style/Account/style_account.css
@@ -18,7 +18,7 @@ h2 {
     margin-bottom: 20px;;
 }
 
-.prescription, .rdvModif {
+.prescription, .rdvComing, .rdvPast {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 40px;
