--- a/style/Account/style_appointment.css
+++ b/style/Account/style_appointment.css
@@ -68,9 +68,10 @@ h2 {
     display:grid;
     grid-template-columns: repeat(4, 1fr);
     column-gap: 10px;
+    position: relative;
 }
 
-.champsRecherche :last-child {
+.champsRecherche a {
     grid-column: 4 / 5;
     grid-row: 1 / 3;
 }
@@ -181,4 +182,33 @@ img {
 .grid4 {
     grid-column: 2 / 4;
     grid-row: 2;
+}
+
+/* Autocomplétion recherche */
+
+#suggestions {
+    list-style: none;
+    border: 1px solid #ccc;
+    max-height: 150px;
+    overflow-y: auto;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    background-color: white;
+    z-index: 1000;
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+#suggestions li {
+    padding: 8px;
+    cursor: pointer;
+}
+#suggestions li:hover {
+    background-color: #f0f0f0;
+}
+
+#suggestions:empty {
+    display: none;
 }
