--- a/style/Account/style_appointment.css
+++ b/style/Account/style_appointment.css
@@ -81,16 +81,11 @@ h2 {
     gap: 30px;
 }
 
-.carte {
-    flex: 3;
-}
-
-img {
-    margin-top: 10px;
-}
-
-.infosEtablissement {
-    flex: 2;
+#map {
+    width: 100%;
+    height: 350px;
+    border-radius: 10px;
+    margin-top: 20px;
 }
 
 /* Appointment change*/
@@ -219,4 +214,13 @@ img {
 .autocomplete input {
     width: 100%;
     height: 100%;
+}
+
+/* Map interactive */
+.detailsCenter {
+    margin-top: 40px;
+}
+
+.detailsCenter ul {
+    padding-left: 20px;
 }
