--- a/style/Account/style_appointment.css
+++ b/style/Account/style_appointment.css
@@ -141,6 +141,11 @@ h2 {
     padding: 20px;
     text-align: center;
     align-items: center;
+    max-width: 500px;
+}
+
+#treatmentDiv li {
+    margin-left: 20px;
 }
 
 .result img {
@@ -159,24 +164,37 @@ h2 {
     height: 32px;
 }
 
+.gridResults {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    text-align: left;
+    margin: 20px 0px;
+}
+
+
 .grid1 {
     grid-column: 1;
     grid-row: 1;
+    align-self: center;
 }
 
 .grid2 {
-    grid-column: 2 / 4;
+    grid-column: 2 / 6;
     grid-row: 1;
 }
 
 .grid3 {
     grid-column: 1;
     grid-row: 2;
+    align-self: center;
+    margin-top: 10px;
 }
 
 .grid4 {
-    grid-column: 2 / 4;
+    grid-column: 2 / 6;
     grid-row: 2;
+    align-self: center;
+    margin-top: 10px;
 }
 
 /* Autocomplétion recherche */
@@ -223,4 +241,21 @@ h2 {
 
 .detailsCenter ul {
     padding-left: 20px;
+}
+
+/* Calendrier */
+.gridCalendar {
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+    width: 100%;
+}
+
+.calendar {
+    display: flex;
+}
+
+.button {
+    border-style: none;
+    background-color: white;
+    cursor: pointer;
 }
