--- a/style/Account/style_appointment.css
+++ b/style/Account/style_appointment.css
@@ -90,11 +90,11 @@ h2 {
 
 /* Appointment change*/
 
-.rdv, .modif, .cancel {
+.rdv, .modif, .cancel, .rdvChange {
     border: solid black 1px;
     border-radius: 10px;
     padding: 20px;
-    width: 25%;
+    width: 30%;
     text-align: center;
     display: flex;              
     flex-direction: column;
@@ -169,6 +169,7 @@ h2 {
     grid-template-columns: repeat(5, 1fr);
     text-align: left;
     margin: 20px 0px;
+    align-items: center;
 }
 
 
@@ -181,6 +182,8 @@ h2 {
 .grid2 {
     grid-column: 2 / 6;
     grid-row: 1;
+    display: flex;
+    align-items: center; 
 }
 
 .grid3 {
@@ -193,8 +196,18 @@ h2 {
 .grid4 {
     grid-column: 2 / 6;
     grid-row: 2;
-    align-self: center;
     margin-top: 10px;
+    display: flex;
+    align-items: center; 
+}
+
+.grid4 ul {
+    margin: 0px;
+}
+
+.grid4 li {
+    margin: 0px;
+    margin-left: 15px;
 }
 
 /* Autocomplétion recherche */
