--- a/style/Account/style_appointment.css
+++ b/style/Account/style_appointment.css
@@ -272,3 +272,25 @@ h2 {
     background-color: white;
     cursor: pointer;
 }
+
+.slotButton {
+    border-radius: 5px;
+    height: 30px;
+    width: 50px;
+    margin: 1px;
+    border: solid gray 1px;
+}
+
+.slotButton:hover {
+    background-color: rgb(201, 201, 201);
+    cursor: pointer;
+    border: solid gray 2px;
+    font-weight: 600;
+}
+
+.pastSlot:hover, .slotButton:disabled {
+    background-color: rgb(248, 248, 248);
+    cursor: auto;
+    border: none;
+    font-weight: 400;
+}
