Changement majeur appointment !! Bugs réglés sont de retour (en cours) via nouvelle méthode appointment sans création de slot

--- a/style/Account/style_appointment.css
+++ b/style/Account/style_appointment.css
@@ -24,13 +24,9 @@ h2 {
     max-width: 30%;
 }
 
-.rdvComing, .rdvPast {
-    margin-top: 10px;
-}
-
 .rdvComing .bouton, .rdvPast .bouton {
     display: block;
-    margin: 10px auto 0;
+    margin: 10px 10px 0;
 }
 
 .bouton {
@@ -208,6 +204,14 @@ h2 {
 .grid4 li {
     margin: 0px;
     margin-left: 15px;
+}
+
+.left {
+    text-align: justify;
+}
+
+ul {
+    margin-left: 20px;
 }
 
 /* Autocomplétion recherche */
