--- a/style/Admin/style_doctor.css
+++ b/style/Admin/style_doctor.css
@@ -3,39 +3,32 @@ h1 {
     margin-bottom: 30px;
 }
 
-.module {
-    border: solid black 1px;
-    border-radius: 10px;
-    padding: 20px;
-    max-width: 700px;
-    margin: 30px auto;
-}
-
 h2 {
     text-align: center;
     margin-bottom: 20px;
 }
 
-.form {
-    display: flex;
-    justify-content: center;
-    gap: 30px;
-    margin-bottom: 50px;
-}
+/* h3 {
+    font-size: 0.9rem;
+    font-weight: 600;
+    margin-bottom: 20px;
+    text-align: center;
+} */
 
 .bouton {
     width: 300px;
     text-decoration: none;
     color: black;
     background-color: white;
-    border: black 1px;
-    border-style: solid;
+    border: solid black 1px;
     border-radius: 10px;
     padding: 12px 32px;
     font-size: 1em;
     cursor: pointer;
     text-align: center;
-    display: inline-block;
+    display: block;
+    margin: 0px auto;
+    margin-top: 20px;
 }
 
 .bouton:hover {
@@ -43,13 +36,65 @@ h2 {
     background-color: #f0f0f0;
 }
 
-h3 {
-    font-size: 0.9rem;
-    font-weight: 600;
-    margin-bottom: 20px;
+/* Specialist */
+
+.module {
+    border: solid black 1px;
+    border-radius: 10px;
+    padding: 20px;
+    max-width: 700px;
+    margin: 30px auto;
     text-align: center;
 }
 
+/* autocomplete */
+
+.autocomplete {
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+    margin: 30px 0px;
+    position: relative;
+    align-items: flex-start;
+
+}
+
+.wrapper {
+    position: relative;
+    width: 50%;
+}
+
+.wrapper input {
+    width: 100%;
+}
+
+#suggestionsQui {
+    list-style: none;
+    border: 1px solid #ccc;
+    max-height: 150px;
+    overflow-y: auto;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    background-color: white;
+    z-index: 1000;
+    padding: 0;
+    margin: 0;
+}
+#suggestionsQui li {
+    padding: 8px;
+    cursor: pointer;
+}
+#suggestionsQui li:hover {
+    background-color: #f0f0f0;
+}
+
+#suggestionsQui:empty {
+    display: none;
+}
+
+/*
 .sousModule {
     display: flex;
     gap: 20px;
@@ -62,23 +107,19 @@ h3 {
     width: 1px;
     height: 100px;
     border:solid black 1px;
-}
-
-.label, .input {
-    text-align: center;
-}
-
-.shortField {
-    width: 30%;
-}
+}*/
 
 .grid {
     display: grid;
-    grid-template-columns: 1fr 3fr;
+    grid-template-columns: 1fr 5fr;
     gap: 5px;
 }
 
-.grid2 {
+.icon {
+    justify-self: center;
+}
+
+/*.grid2 {
     display:grid;
     grid-template-columns: 0.5fr 1fr 1fr 1fr 1fr 1fr;
     gap: 10px;
@@ -114,3 +155,5 @@ h3 {
 .grid :last-child {
     margin-bottom: 10px;
 }
+
+*/
