--- a/style/Admin/style_doctor.css
+++ b/style/Admin/style_doctor.css
@@ -1,3 +1,4 @@
+/* Global */
 h1 {
     text-align: center;
     margin-bottom: 30px;
@@ -8,12 +9,13 @@ h2 {
     margin-bottom: 20px;
 }
 
-/* h3 {
-    font-size: 0.9rem;
+h3 {
+    font-size: 1rem;
     font-weight: 600;
-    margin-bottom: 20px;
+    margin-top: 20px;
+    margin-bottom: 10px;
     text-align: center;
-} */
+}
 
 .bouton {
     width: 300px;
@@ -36,8 +38,6 @@ h2 {
     background-color: #f0f0f0;
 }
 
-/* Specialist */
-
 .module {
     border: solid black 1px;
     border-radius: 10px;
@@ -47,7 +47,7 @@ h2 {
     text-align: center;
 }
 
-/* autocomplete */
+/* Specialist */
 
 .autocomplete {
     display: flex;
@@ -94,22 +94,9 @@ h2 {
     display: none;
 }
 
-/*
-.sousModule {
-    display: flex;
-    gap: 20px;
-    justify-content: space-around;
-    margin-top: 20px;
-    align-items: center;
-}
+/* Results */
 
-.traitHorizontal {
-    width: 1px;
-    height: 100px;
-    border:solid black 1px;
-}*/
-
-.grid {
+.gridAddress {
     display: grid;
     grid-template-columns: 1fr 5fr;
     gap: 5px;
@@ -119,41 +106,42 @@ h2 {
     justify-self: center;
 }
 
-/*.grid2 {
+/* Add */
+
+.gridForm {
+    display: grid;
+    grid-template-columns: 2fr 5fr;
+    gap: 5px;
+    text-align: left;
+}
+
+.gridDispo {
     display:grid;
     grid-template-columns: 0.5fr 1fr 1fr 1fr 1fr 1fr;
     gap: 10px;
+    text-align: left;
 }
 
-.legend {
-    font-size: 0.8rem;
-}
-
-.gridSpec1 {
-    grid-column: 3;
+.gridAM {
+    grid-column: 3/5;
     margin-bottom: 5px;
-    margin-top: 10px;
+    margin-top: 20px;
 }
 
-.gridSpec2 {
-    grid-column: 5;
+.gridPM {
+    grid-column: 5/7;
+    margin-bottom: 5px;
+    margin-top: 20px;
 }
 
-.boutonContainer {
+/* Change */
+
+ul {
+    margin-left: 30px;
+    text-align: left;
+}
+
+#treatments {
     display: flex;
-    justify-content: center;
-    margin-top: 30px;
-}
-
-.dispo {
-    display: flex;
-    gap: 20px;
     align-items: center;
-    margin: 10px 0px;
 }
-
-.grid :last-child {
-    margin-bottom: 10px;
-}
-
-*/
