--- a/style/Admin/style_doctor.css
+++ b/style/Admin/style_doctor.css
@@ -166,3 +166,63 @@ ul {
     height: 100%;
     width: 100%;
 }
+
+.wrapperTreatment {
+    position: relative;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.wrapperCenter {
+    position: relative;
+    width: 100%;
+}
+
+.wrapperCenter input {
+    width: 100%;
+}
+
+.wrapperTreatment input {
+    width: 90%;
+}
+
+#suggestionsTreatment, #suggestionsCenter {
+    list-style: none;
+    border: 1px solid #ccc;
+    max-height: 150px;
+    overflow-y: auto;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    background-color: white;
+    z-index: 1000;
+    padding: 0;
+    margin: 0;
+}
+#suggestionsTreatment li, #suggestionsCenter li {
+    padding: 8px;
+    cursor: pointer;
+}
+#suggestionsTreatment li:hover, #suggestionsCenter li:hover {
+    background-color: #f0f0f0;
+}
+
+#suggestionsTreatment:empty, #suggestionsCenter:empty{
+    display: none;
+}
+
+.addButton {
+    border: none;
+    background-color: white;
+    cursor: pointer;
+    height: 30px;
+    width: 30px;
+}
+
+.addButton img {
+    height: 100%;
+    width: 100%;
+}
